# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import diagnosesRouter from "./diagnoses";
 import authRouter from "./auth";
 import upgradeRequestRouter from "./upgrade-request";
 import stripeRouter from "./stripe";
+import communityRouter from "./community";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(authRouter);
 router.use(diagnosesRouter);
 router.use(upgradeRequestRouter);
 router.use(stripeRouter);
+router.use(communityRouter);
 
 export default router;
