# lib/db/src/schema/index.ts
@@ -20,3 +20,4 @@
 export * from "./diagnoses";
 export * from "./auth";
 export * from "./upgrade-requests";
+export * from "./community";
